--- a/index.html
+++ b/index.html
@@ -1,33 +1,120 @@
-<html>
+<html style="text-align:center">
   <head>
-    <title>The Official my Favorite Stuff Website</title>
-  <link rel=stylesheet href="style.css">
+      <title>The Official my Favorite Stuff Website</title>
     </head>
   <body id="everything">
-    <section id="favorite">
-    <center>
-        <br />
-        <h1>Pages:</h1>
+    <div id = "pages">
+         <h1>The Official my Favorite Stuff Website</h1> <br>
+            <h1>Pages:</h1>
         <button>
-        <h1><a href="math.html">Math</a></h1>
+        <h1><a href="#math">Math</a></h1>
         </button>
         <button>
-        <h1><a href="longs.html">The Long S</a></h1>
+        <h1><a href="#longs">The Long S</a></h1>
         </button>
         <button>
-        <h1><a href="draw.html">Drawing</a></h1>
+        <h1><a href="#drawing">Drawing</a></h1>
         </button>
             <button>
-        <h1><a href="index.html">Homepage</a></h1>
-        </button>
-        <h1>The Official my Favorite Stuff Website</h1>
-        <img src="https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555462867/shape/mentalfloss/31904-wikimediacommons-long_s_0.png?itok=8c9q45Ag" width="200" height="200"/>
-        <br>
-        <br>
-            <img src="https://cms-assets.tutsplus.com/uploads/users/108/posts/25302/image/seven-drawing-sins-2-mind-photo.png" width="300"/>
-        <br>
+            <h1><a href="#works">Works</a></h1>
+            </button>
+            <button>
+            <h1><a href="#reviews">Reviews</a></h1>
+            </button>
+      </div>
+    <section id="math">
+    <center>
         <img src="https://www.mcvts.net/cms/lib/NJ01911694/Centricity/Domain/1021/Math%20001.png" width="400" height="200"/>
+    <p id="display">Math</p>
+      <hr size="10" noshade color="black" width="100">
+      <h2>One of my favorite things to do <br />
+        is math. I wouldn't look into <br />
+        the math book. I would just <br />
+        make up my own numbers and <br />
+        think of a math problem. <br />
+      </h2>
+    <h1><br /></h1>
+            <h1><br /></h1>
         </center>
     </section>
+<section id="drawing">
+      <center>
+        <br />
+            <img src="https://cms-assets.tutsplus.com/uploads/users/108/posts/25302/image/seven-drawing-sins-2-mind-photo.png" width="300"/>
+    <p id="display">Drawing</p>
+      <hr size="10" noshade color="black" width="100">
+      <h2>
+        Another thing that I like to do is draw.<br />
+      Maybe being an artist will be my career.<br />
+          I'm personally a fan of Jackson Pollock<br /><br />
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/TCEgtPAhtuo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </h2>
+    <h1><br /></h1>
+            <h1><br /></h1>
+        </center>
+    </section>
+      <section id="longs">
+    <center>
+            <img src="https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555462867/shape/mentalfloss/31904-wikimediacommons-long_s_0.png?itok=8c9q45Ag" width="200" height="200"/>
+            <p id="display">The Long S</p>
+      <hr size="10" noshade color="black" width="100">
+            <h2>Another one of my interests is old language.  <br/>
+        I've heard of this old letter  that looks like this:ſ(a funky f)<br /> 
+        The modern S existed back in the<br />
+        very old days too. It was alternative called <br />
+        the long s was used as often <br />
+        as the normal s. </h2>
+            <h1><br /></h1>
+            <h1><br /></h1>
+        </center>
+    </section>
+        <section id = "works">
+      <p id = "display">Works For My Favorite Stuff.</p>
+            <p id="display">Finding Mistakes In Math:</p>
+            <p id="display">Finding the area of a circle. Radius: 5 units.</p><br>
+            <hr size="10" noshade color="black" width="100">
+           <h1>3.14<br>
+               x 25<br>
+              _____<br>
+              15.70<br>
+             +62.80<br>
+              _____<br>
+              77.50</h1>
+            <h1>Oh No! I forgot to carry the one during addition!</h1><br>
+            <h1>The real answer is 78.50.</h1><br>
+            <h1>That's a real mistake I once did.</h1><br>
+            <p id="display">Abstract Art Piece Of Work:</p>
+            <hr size="10" noshade color="black" width="100">
+            <img src="webcam-toy-photo1.jpg">
+            <h1>The idea is that a lot of faces are similar to each other.</h1>
+      </section>'
+      <section id="reviews">
+          <h1 id = "display">Reviews</h1>
+      <h1 style="font-size:40px">Math</h1>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQElzjCsl9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h1 style="font-size:40px">Art</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/LN820hIQ17Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <h1 style="font-size:40px">Language</h1>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/RKK7wGAYP6k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </section>
+      <style>
+      #everything{
+    background-color: darkgray;
+}
+        section{
+            margin-top:100px;
+            font-family: 'Montserrat', sans-serif;
+            background-image: linear-gradient(aquamarine,green);
+      }
+        #display{
+          font-size:60px;
+        }
+          .top{
+              margin-top:30px;
+          }
+          html{
+              scroll-behavior: smooth;
+          }
+          </style>
   </body>
 </html>
