--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
   <body id="everything">
     <div id="pages">
-         <h1>The Official my Favorite Stuff Website</h1> <br>
+         <h1 id="display">The Official my Favorite Stuff Website</h1> <br>
             <h1>Pages:</h1>
         <button>
         <h1><a href="#math">Math</a></h1>
