--- a/index.html
+++ b/index.html
@@ -1,138 +1,56 @@
-<html style="text-align:center">
-  <head>
-      <title>The Official my Favorite Stuff Website</title>
+<html>
+<head>
+   <title>Bjarne Stroustrup's offical website</title>
+    <link rel="stylesheet" href="style.css"/>
     </head>
-  <body id="everything">
-    <div id="pages">
-         <h1 id="display">The Official my Favorite Stuff Website</h1> <br>
-            <h1>Pages:</h1>
-        <button>
-        <h1><a href="#math">Math</a></h1>
-        </button>
-        <button>
-        <h1><a href="#longs">The Long S</a></h1>
-        </button>
-        <button>
-        <h1><a href="#drawing">Drawing</a></h1>
-        </button>
-            <button>
-            <h1><a href="#works">Works</a></h1>
-            </button>
-            <button>
-            <h1><a href="#reviews">Reviews</a></h1>
-            </button>
-            <button>
-            <h1><a href="#inspirations">Inspirations</a></h1>
-            </button>
-      </div>
-    <section id="math">
-    <center>
-        <img src="https://www.mcvts.net/cms/lib/NJ01911694/Centricity/Domain/1021/Math%20001.png" width="400" height="200"/>
-    <h1 id="display">Math</h1>
-      <hr size="10" noshade color="black" width="100">
-      <h2>One of my favorite things to do <br />
-        is math. I wouldn't look into <br />
-        the math book. I would just <br />
-        make up my own numbers and <br />
-        think of a math problem. <br />
-      </h2>
-    <h1><br /></h1>
-            <h1><br /></h1>
-        </center>
-    </section>
-<section id="drawing">
-      <center>
-        <br />
-            <img src="https://cms-assets.tutsplus.com/uploads/users/108/posts/25302/image/seven-drawing-sins-2-mind-photo.png" width="300"/>
-    <h1 id="display">Drawing</h1>
-      <hr size="10" noshade color="black" width="100">
-      <h2>
-        Another thing that I like to do is draw.<br />
-      Maybe being an artist will be my career.<br />
-          I'm personally a fan of Jackson Pollock<br /><br />
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/TCEgtPAhtuo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </h2>
-    <h1><br /></h1>
-            <h1><br /></h1>
-        </center>
-    </section>
-      <section id="longs">
-    <center>
-            <img src="https://images2.minutemediacdn.com/image/upload/c_fit,f_auto,fl_lossy,q_auto,w_728/v1555462867/shape/mentalfloss/31904-wikimediacommons-long_s_0.png?itok=8c9q45Ag" width="200" height="200"/>
-            <h1 id="display">The Long S</h1>
-      <hr size="10" noshade color="black" width="100">
-            <h2>Another one of my interests is old language.  <br/>
-        I've heard of this old letter  that looks like this:ſ(a funky f)<br /> 
-        The modern S existed back in the<br />
-        very old days too. It was alternative called <br />
-        the long s was used as often <br />
-        as the normal s. </h2>
-            <h1><br /></h1>
-            <h1><br /></h1>
-        </center>
-    </section>
-        <section id = "works">
-      <h1 id = "display">Works For My Favorite Stuff.</h1>
-            <h2>Finding Mistakes In Math:</h2>
-            <h2>Finding the area of a circle. Radius: 5 units.</h2><br>
-            <hr size="10" noshade color="black" width="100">
-           <h1>3.14<br>
-               x 25<br>
-              _____<br>
-              15.70<br>
-             +62.80<br>
-              _____<br>
-              77.50</h1>
-            <h1>Oh No! I forgot to carry the one during addition!</h1><br>
-            <h1>The real answer is 78.50.</h1><br>
-            <h1>That's a real mistake I once did.</h1><br>
-            <h1 id="display">Abstract Piece Of Art Work:</h1>
-            <hr size="10" noshade color="black" width="100">
-            <img src="webcam-toy-photo1.jpg">
-            <h1>The idea is that a lot of faces are similar to each other.</h1>
-      </section>'
-      <section id="reviews">
-          <h1 id = "display">Reviews</h1>
-      <h1 style="font-size:40px">Math</h1>
-     <iframe width="560" height="315" src="https://www.youtube.com/embed/ZQElzjCsl9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h1 style="font-size:40px">Art</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/LN820hIQ17Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-          <h1 style="font-size:40px">Language</h1>
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/RKK7wGAYP6k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <br>
-        <br>
-      </section>
-      <section id="inspirations">
-      <h1 id="display">Inspirations</h1>
-          <hr size="10" noshade color="black" width="100">
-          <h1>Click on the pictures to view my inspirations.</h1>
-          <h2>Jackson Pollock</h2><a href="https://www.jackson-pollock.org/" target="_blank"><img  id="size" src="https://uploads0.wikiart.org/images/paul-jackson-pollock.jpg!PinterestLarge.jpg" width="400"/></a>
-          <h2>Pythagoras</h2><a href="https://www.youtube.com/watch?v=HYulFhPtoAo" target="_blank"><img  id="size" width="400" src="https://myhero.com/images/guest/g35723/hero32426/g35723_u34867_Pythagoras_10.jpeg"/></a>
-      <br>
-        <br>
-        <br>
-    </section>
-      <style>
-      #everything{
-    background-color: darkgray;
-}
-        section{
-            margin-top:100px;
-            font-family: 'Montserrat', sans-serif;
-            background-image: linear-gradient(aquamarine,green);
-      }
-        #display{
-          font-size:60px;
-        }
-          html{
-              scroll-behavior: smooth;
-          }
-          img { 
-              transition: transform .2s;
-          }
-          img:hover { 
-              transform: scale(0.75);
-          }
-          </style>
-  </body>
+    <body>
+        <ul class="menu"> <li class="links"><a href="#welcome">HOME </a><li class="links"><a href="#videos">VIDEOS </a><li class="links"><a href="#work">WORK </a><li class="links"><a href="#writings">WRITINGS</a> <li class="links"><a href="#contact">CONTACT</a></ul><center>      
+            <h1>Bjarne Stourstrup</h1>
+                <img src="https://www.engineering.columbia.edu/files/seas/styles/300x300/public/content/bio_profile_image/2020/27/stroustrup_500.png?itok=CumUm5ll" id="person"/>
+                <h3>Bjarne Stourstrup is the creator of C++. C++ is very useful in robotics, deep learning, good graphics in game development, and computer vision. Here's a hello world program in C++.</h3> 
+            </center>
+                <div id="code">
+            <h3>#include &ltiostream></h3>
+                <h3>using namespace std;</h3>
+            <h3>int main(){</h3>
+            <h3>cout &lt&lt "Hello World";</h3>
+            <h3>return 0;</h3>
+            <h3>}</h3>
+            </div>
+        <center><h2>Here's a 2 minute interview of Bjarne Stourstrup</h2>
+<h1 class="black">\/</h1>
+            <h1 class="black" style="text-color:black">\/</h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UdTzHmjMYBc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1>
+            My personal favorite thing about C++ is that Unreal Engine supports it. It's a software that helps you develop computer games. Here's the link for it: 
+            <a class="lightblue" href="unrealengine.com">Unreal Engine.</a>
+            </h1>
+            <h1>
+            It also has a software called Metahuman. It helps you create hyperrealistic 3d simulations of poeple. Here's the link for that: 
+                <a class="lightblue" href="https://www.unrealengine.com/en-US/digital-humans">Unreal Engine Metahuman.</a>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/6mAF5dWZXcI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </h1>
+            </center>
+        <section id="interviews">
+                <center><h1 style="font-size: 70px">Interviews</h1>
+        <center>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UdTzHmjMYBc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+            <h1><br></h1>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UZPB9cf9FjM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h1><br></h1>
+            <iframe id="hour" width="599" height="284" src="https://www.youtube.com/embed/TsHDECQ6jYw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+                </center>
+                </section>
+        <section id="works">
+        <center><h1 id="white">WORKS</h1>
+            <iframe width="500" frameborder="0" src="https://www.stroustrup.com/" height="500"></iframe></center>
+        </section>
+<section id="contact">
+<center>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21.582396156154573!2d-117.90810281629457!3d33.675924154816265!2m3!1f299.75000000000017!2f79.08151611225357!3f0!3m2!1i1024!2i768!4f35!3m3!1m2!1s0x80dcdf699663739b%3A0x6289c2b1c35e38cb!2s1206%20Citrus%20Pl%2C%20Costa%20Mesa%2C%20CA%2092626!5e1!3m2!1sen!2sus!4v1623458753014!5m2!1sen!2sus" width="450" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    <span>
+        <br><br><img width="50" src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Gmail_icon_%282020%29.svg/1200px-Gmail_icon_%282020%29.svg.png"><h1 id = "white">Contact me at bjarne@gmail.com</h1></span>
+    </center>
+ </section>
+</body>
 </html>
