--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <h3>}</h3>
             </div>
         <center><h2>Here's a 2 minute interview of Bjarne Stourstrup</h2>
-<h1 class="black">\/</h1>
-            <h1 class="black" style="text-color:black">\/</h1>
+<h1 class="black">V</h1>
+            <h1 class="black">V</h1>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/UdTzHmjMYBc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h1>
             My personal favorite thing about C++ is that Unreal Engine supports it. It's a software that helps you develop computer games. Here's the link for it: 
